CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.16

	- Fixed a bug in the vsnprintf() emulation function,
	  which was used on old versions of HP-UX, IRIX, and
	  Solaris.
	- The number-up option was incorrectly being used when
	  printing banner pages.
	- Added support for Greek and Slovak PPD files.
	- CUPS now supports printer names containing any
	  printable character, e.g. "123-abc", "foo-bar", etc.
	- The null filter was not supported in mime.convs due to
	  a bug in the filter validation code.
	- Changes in the default printer and printer attributes
	  were not always reflected in the generated printcap
	  file.
	- Implicit classes did not inherit the location or
	  description from member printers.
	- The httpGetHostByName() function did not handle
	  hostnames that started with a number.
	- Updated the filters to use the %ESPRotation comment
	  instead of %%Orientation to auto-rotate pages, since
	  the use of %%Orientation is inconsistent.
	- Added the RootCertDuration directive to control how
	  often the root authentication certificate is updated.
	- Increased the size of the IPP write buffer to 32k to
	  allow for larger attribute values and to provide more
	  efficient output of large numbers of attributes.
	- The polling daemon now retries the initial connection
	  to the remote server; this fixes a problem when the
	  remote server is unavailable when the scheduler starts
	  up...
	- The scheduler didn't validate Digest users against the
	  system group(s), so Digest and BasicDigest
	  authentication didn't work for administration
	  operations.
	- The scheduler now passes the SHLIB_PATH environment
	  variable to child processes (HP-UX shared libraries)
	- The scheduler now maps accesses from the loopback
	  interface to "localhost".
	- The cups-lpd mini-daemon sent a status code byte in
	  response to queue state commands, but those commands
	  only return textual data.


CHANGES IN CUPS V1.1.15-1
